--- a/app/index.html
+++ b/app/index.html
@@ -7,52 +7,54 @@
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="styles/neutron-all.css">
+    <link rel="stylesheet" href="styles/osx.css">
 
   </head>
   <body>
 
     <h3>Table</h3>
+    <button class="btn">Change iCloud Password...</button>
 
+    <br><br>
     <table class="table auto-focus active">
       <thead>
         <tr>
-          <th>Hide</th>
+          <th width="20">Hide</th>
           <th>Item</th>
           <th>Kind</th>
         </tr>
       </thead>
       <tbody>
         <tr tabindex="0">
-          <td>
+          <td class="text-center">
             <input type="checkbox">
           </td>
           <td>Google Chrome</td>
           <td>Application</td>
         </tr>
         <tr tabindex="0">
-          <td>
+          <td class="text-center">
             <input type="checkbox">
           </td>
           <td>Dropbox</td>
           <td>Application</td>
         </tr>
         <tr tabindex="0">
-          <td>
+          <td class="text-center">
             <input type="checkbox">
           </td>
           <td>Dropbox</td>
           <td>Application</td>
         </tr>
         <tr tabindex="0">
-          <td>
+          <td class="text-center">
             <input type="checkbox">
           </td>
           <td>Dropbox</td>
           <td>Application</td>
         </tr>
         <tr tabindex="0">
-          <td>
+          <td class="text-center">
             <input type="checkbox">
           </td>
           <td>Dropbox</td>
