--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,19 @@
   </head>
   <body>
 
+    <h3>Buttons</h3>
+
+    <button class="btn">Default</button>
+    <button class="btn btn-primary">Primary</button>
+    <button class="btn btn-positive">Positive</button>
+    <button class="btn btn-negative">Negative</button>
+    <button class="btn btn-warning">Warning</button>
+    <button class="btn btn-info">Info</button>
+
+
+
+
     <h3>Table</h3>
-    <button class="btn">Change iCloud Password...</button>
 
     <br><br>
     <table class="table auto-focus active">
