--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,10 @@
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+
+    <!-- build:css styles/osx.css -->
     <link rel="stylesheet" href="styles/osx.css">
+    <!-- endbuild -->
 
   </head>
   <body>
@@ -15,11 +18,13 @@
     <h3>Buttons</h3>
 
     <button class="btn">Default</button>
+    <button class="btn btn-passive">Passive</button>
     <button class="btn btn-primary">Primary</button>
     <button class="btn btn-positive">Positive</button>
     <button class="btn btn-negative">Negative</button>
     <button class="btn btn-warning">Warning</button>
     <button class="btn btn-info">Info</button>
+
 
 
 
