--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
+    <link rel="import" href="/neutron-icons.html">
 
     <!-- build:css styles/osx.css -->
     <link rel="stylesheet" href="styles/osx.css">
@@ -14,8 +15,6 @@
 
   </head>
   <body>
-
-    <h3>Window </h3>
 
     <div class="window">
       <div class="toolbar">
@@ -28,68 +27,113 @@
           Window Title
         </div>
       </div>
+      <div style="padding:10px;">
 
+        <i class="icon">
+          <svg><use xlink:href="#arrow"/></svg>
+        </i>
+
+        <i class="icon gray">
+          <svg><use xlink:href="#shuffle"/></svg>
+        </i>
+
+        <i class="icon gray">
+          <svg><use xlink:href="#camera"/></svg>
+        </i>
+
+        <h3>Buttons</h3>
+        <button class="btn">Default
+          <i class="icon">
+            <svg><use xlink:href="#arrow"/></svg>
+          </i>
+        </button>
+        <button class="btn btn-passive">Passive</button>
+        <button class="btn btn-primary">Primary
+          <i class="icon white">
+            <svg><use xlink:href="#camera"/></svg>
+          </i>
+        </button>
+        <button class="btn btn-positive">Positive</button>
+        <button class="btn btn-negative">Negative</button>
+        <button class="btn btn-warning">Warning</button>
+        <button class="btn btn-info">Info</button>
+
+        <br><br>
+
+        <h4>Buttons large</h4>
+        <button class="btn large">Default</button>
+        <button class="btn btn-primary large">Positive</button>
+
+        <br><br>
+        <h4>Buttons small</h4>
+        <button class="btn small">Default</button>
+        <button class="btn btn-primary small">Positive</button>
+
+        <br><br>
+        <h4>Buttons groups</h4>
+        <button class="btn small">Default</button>
+        <button class="btn btn-primary small">Positive</button>
+
+
+
+        <h3>Table</h3>
+
+        <table class="table">
+          <thead>
+            <tr>
+              <th width="20">Hide</th>
+              <th>Item</th>
+              <th>Kind</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr tabindex="0">
+              <td class="text-center">
+                <input type="checkbox">
+              </td>
+              <td>Google Chrome</td>
+              <td>Application</td>
+            </tr>
+            <tr tabindex="0">
+              <td class="text-center">
+                <input type="checkbox">
+              </td>
+              <td>Dropbox</td>
+              <td>Application</td>
+            </tr>
+            <tr tabindex="0">
+              <td class="text-center">
+                <input type="checkbox">
+              </td>
+              <td>Dropbox</td>
+              <td>Application</td>
+            </tr>
+            <tr tabindex="0">
+              <td class="text-center">
+                <input type="checkbox">
+              </td>
+              <td>Dropbox</td>
+              <td>Application</td>
+            </tr>
+            <tr tabindex="0">
+              <td class="text-center">
+                <input type="checkbox">
+              </td>
+              <td>Dropbox</td>
+              <td>Application</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
 
-    <h3>Buttons</h3>
+    <script>
+      var link = document.querySelector('link[rel="import"]');
+      var content = link.import;
+      var el = content.getElementById('svg');
 
-    <button class="btn">Default</button>
-    <button class="btn btn-passive">Passive</button>
-    <button class="btn btn-primary">Primary</button>
-    <button class="btn btn-positive">Positive</button>
-    <button class="btn btn-negative">Negative</button>
-    <button class="btn btn-warning">Warning</button>
-    <button class="btn btn-info">Info</button>
-
-    <h3>Table</h3>
-
-    <table class="table auto-focus active">
-      <thead>
-        <tr>
-          <th width="20">Hide</th>
-          <th>Item</th>
-          <th>Kind</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr tabindex="0">
-          <td class="text-center">
-            <input type="checkbox">
-          </td>
-          <td>Google Chrome</td>
-          <td>Application</td>
-        </tr>
-        <tr tabindex="0">
-          <td class="text-center">
-            <input type="checkbox">
-          </td>
-          <td>Dropbox</td>
-          <td>Application</td>
-        </tr>
-        <tr tabindex="0">
-          <td class="text-center">
-            <input type="checkbox">
-          </td>
-          <td>Dropbox</td>
-          <td>Application</td>
-        </tr>
-        <tr tabindex="0">
-          <td class="text-center">
-            <input type="checkbox">
-          </td>
-          <td>Dropbox</td>
-          <td>Application</td>
-        </tr>
-        <tr tabindex="0">
-          <td class="text-center">
-            <input type="checkbox">
-          </td>
-          <td>Dropbox</td>
-          <td>Application</td>
-        </tr>
-      </tbody>
-    </table>
-
+      document.getElementsByTagName('body')[0].appendChild(el.cloneNode(true));
+    </script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
