--- a/app/index.html
+++ b/app/index.html
@@ -16,117 +16,191 @@
   </head>
   <body>
 
-    <div class="window">
-      <div class="toolbar">
-        <div class="controls">
+    <div class="window has-toolbar-huge">
+      <!-- Begin: toolbar -->
+      <div class="toolbar huge draggable">
+        <div class="window-controls">
           <i close></i>
           <i minimize></i>
           <i></i>
         </div>
         <div class="title">
-          Window Title
+          <div class="title-content">
+            Window Title
+          </div>
+        </div>
+        <div class="toolbar-actions">
+            <div grid>
+              <div two>
+                <button class="btn btn-passive large sub-title" data-name="View">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="Zoom">aaa</button>
+              </div>
+              <div five class="text-center">
+                <button class="btn btn-passive large sub-title" data-name="Insert">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="Table">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="Chart">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="Text">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="Shape">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="Media">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="Comment">aaa</button>
+              </div>
+              <div three class="text-center">
+                <button class="btn btn-passive large sub-title" data-name="Collaborate">aaa</button>
+              </div>
+              <div two class="text-right">
+                <div class="button-groups">
+                  <button class="btn btn-passive large sub-title" data-name="Format">aaa</button>
+                  <button class="btn btn-passive large sub-title" data-name="Documents">aaaaaa</button>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
-      <div style="padding:10px;">
+      <!-- End: toolbar -->
 
-        <i class="icon">
-          <svg><use xlink:href="#arrow"/></svg>
-        </i>
+      <!-- Begin: n-content -->
+      <div  class="n-content" >
+        <aside class="sidebar pane no-padding">
+          <div class="pane-2">
+            <nav class="nav-group">
+            <span class="nav-title">Favorites</span>
+            <span class="nav-item active">Dropbox</span>
+            <span class="nav-item ">iCloud Drive</span>
+            <span class="nav-item">Documents</span>
+            <span class="nav-item">AirDrop</span>
+            <span class="nav-item">Applications</span>
+            <span class="nav-item">Desktop</span>
+            <span class="nav-item">Dwonloads</span>
 
-        <i class="icon gray">
-          <svg><use xlink:href="#shuffle"/></svg>
-        </i>
+            <span class="nav-title">Devices</span>
+            <span class="nav-item">Remote Disc</span>
 
-        <i class="icon gray">
-          <svg><use xlink:href="#camera"/></svg>
-        </i>
+            <span class="nav-title">Shared</span>
+            <span class="nav-item">Arif's Mac</span>
 
-        <h3>Buttons</h3>
-        <button class="btn">Default
+            <span class="nav-title">Tags</span>
+            <span class="nav-item">
+              <i class="icon red">
+                <svg><use xlink:href="#circle"/></svg>
+              </i> Red
+            </span>
+            <span class="nav-item">
+              <i class="icon orange">
+                <svg><use xlink:href="#circle"/></svg>
+              </i> Orange
+            </span>
+            <span class="nav-item">
+              <i class="icon yellow">
+                <svg><use xlink:href="#circle"/></svg>
+              </i> Yellow
+            </span>
+            <span class="nav-item">
+              <i class="icon green">
+                <svg><use xlink:href="#circle"/></svg>
+              </i> Green
+            </span>
+            <span class="nav-item">
+              <i class="icon blue">
+                <svg><use xlink:href="#circle"/></svg>
+              </i> Blue
+            </span>
+
+          </nav>
+          </div>
+          <div class="empty-row"></div>
+
+        </aside>
+        <main class="pane padding">
+          <select name="" id="">
+            <option value="">adsas</option>
+          </select>
+          <h3>Icon example</h3>
           <i class="icon">
             <svg><use xlink:href="#arrow"/></svg>
           </i>
-        </button>
-        <button class="btn btn-passive">Passive</button>
-        <button class="btn btn-primary">Primary
-          <i class="icon white">
-            <svg><use xlink:href="#camera"/></svg>
-          </i>
-        </button>
-        <button class="btn btn-positive">Positive</button>
-        <button class="btn btn-negative">Negative</button>
-        <button class="btn btn-warning">Warning</button>
-        <button class="btn btn-info">Info</button>
 
-        <br><br>
+          <h3>Form controls</h3>
+          <input type="text">
 
-        <h4>Buttons large</h4>
-        <button class="btn large">Default</button>
-        <button class="btn btn-primary large">Positive</button>
+          <h3>Buttons</h3>
+          <button class="btn">Default</button>
+          <button class="btn btn-passive">Passive</button>
+          <button class="btn btn-primary">Primary</button>
+          <button class="btn btn-positive">Positive</button>
+          <button class="btn btn-negative">Negative</button>
+          <button class="btn btn-warning">Warning</button>
+          <button class="btn btn-info">Info</button>
 
-        <br><br>
-        <h4>Buttons small</h4>
-        <button class="btn small">Default</button>
-        <button class="btn btn-primary small">Positive</button>
+          <br><br>
 
-        <br><br>
-        <h4>Buttons groups</h4>
-        <button class="btn small">Default</button>
-        <button class="btn btn-primary small">Positive</button>
+          <h4>Buttons large</h4>
+          <button class="btn large">Default</button>
+          <button class="btn btn-primary large">Positive</button>
+
+          <br><br>
+          <h4>Buttons small</h4>
+          <button class="btn small">Default</button>
+          <button class="btn btn-primary small">Positive</button>
+
+          <br><br>
+          <h4>Buttons groups</h4>
+          <button class="btn small">Default</button>
+          <button class="btn btn-primary small">Positive</button>
 
 
 
-        <h3>Table</h3>
+          <h3>Table</h3>
 
-        <table class="table">
-          <thead>
-            <tr>
-              <th width="20">Hide</th>
-              <th>Item</th>
-              <th>Kind</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr tabindex="0">
-              <td class="text-center">
-                <input type="checkbox">
-              </td>
-              <td>Google Chrome</td>
-              <td>Application</td>
-            </tr>
-            <tr tabindex="0">
-              <td class="text-center">
-                <input type="checkbox">
-              </td>
-              <td>Dropbox</td>
-              <td>Application</td>
-            </tr>
-            <tr tabindex="0">
-              <td class="text-center">
-                <input type="checkbox">
-              </td>
-              <td>Dropbox</td>
-              <td>Application</td>
-            </tr>
-            <tr tabindex="0">
-              <td class="text-center">
-                <input type="checkbox">
-              </td>
-              <td>Dropbox</td>
-              <td>Application</td>
-            </tr>
-            <tr tabindex="0">
-              <td class="text-center">
-                <input type="checkbox">
-              </td>
-              <td>Dropbox</td>
-              <td>Application</td>
-            </tr>
-          </tbody>
-        </table>
+          <table class="table">
+            <thead>
+              <tr>
+                <th width="20">Hide</th>
+                <th>Item</th>
+                <th>Kind</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr tabindex="0">
+                <td class="text-center">
+                  <input type="checkbox">
+                </td>
+                <td>Google Chrome</td>
+                <td>Application</td>
+              </tr>
+              <tr tabindex="0">
+                <td class="text-center">
+                  <input type="checkbox">
+                </td>
+                <td>Dropbox</td>
+                <td>Application</td>
+              </tr>
+              <tr tabindex="0">
+                <td class="text-center">
+                  <input type="checkbox">
+                </td>
+                <td>Dropbox</td>
+                <td>Application</td>
+              </tr>
+              <tr tabindex="0">
+                <td class="text-center">
+                  <input type="checkbox">
+                </td>
+                <td>Dropbox</td>
+                <td>Application</td>
+              </tr>
+              <tr tabindex="0">
+                <td class="text-center">
+                  <input type="checkbox">
+                </td>
+                <td>Dropbox</td>
+                <td>Application</td>
+              </tr>
+            </tbody>
+          </table>
+        </main>
       </div>
+      <!-- End: n-content -->
     </div>
-
     <script>
       var link = document.querySelector('link[rel="import"]');
       var content = link.import;
