--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,22 @@
       </div>
       <!-- End: toolbar -->
 
+      <!-- Begin: modal -->
+      <div class="modal">
+        <label for="">Go to the folder:</label>
+        
+        <select name="" id=""  style="width:100%;">
+          <option value="">adsas</option>
+        </select>
+
+        <br>
+        <br>
+
+        <button class="btn btn-primary fr">Go</button>
+        <button class="btn fr" style="margin-right:10px">Cancel</button>
+      </div>
+      <!-- End: modal -->
+
       <!-- Begin: n-content -->
       <div  class="n-content" >
         <aside class="sidebar pane no-padding">
