--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <!-- endbuild -->
 
   </head>
-  <body>
+  <body id="test">
 
     <div class="window has-toolbar-huge">
       <!-- Begin: toolbar -->
@@ -216,6 +216,7 @@
 
       document.getElementsByTagName('body')[0].appendChild(el.cloneNode(true));
     </script>
+    <script src="scripts/neutron.dom.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
