add group buttons

--- a/app/index.html
+++ b/app/index.html
@@ -49,8 +49,8 @@
               </div>
               <div two class="text-right">
                 <div class="button-groups">
-                  <button class="btn btn-passive large sub-title" data-name="Format">aaa</button>
-                  <button class="btn btn-passive large sub-title" data-name="Documents">aaaaaa</button>
+                  <button class="btn btn-passive large sub-title" data-name="Format">.</button>
+                  <button class="btn btn-passive large sub-title" data-name="Documents">.</button>
                 </div>
               </div>
             </div>
@@ -119,16 +119,29 @@
 
         </aside>
         <main class="pane padding">
-          <select name="" id="">
-            <option value="">adsas</option>
-          </select>
+
           <h3>Icon example</h3>
           <i class="icon">
             <svg><use xlink:href="#arrow"/></svg>
           </i>
 
-          <h3>Form controls</h3>
-          <input type="text">
+          <h4>Buttons groups</h4>
+
+          <div class="button-groups">
+            <button class="btn btn-passive">General</button>
+            <button class="btn btn-passive">FileVault</button>
+            <button class="btn btn-passive">Firewall</button>
+            <button class="btn btn-primary">Privacy</button>
+          </div>
+          <br>
+          <br>
+          <div class="button-groups">
+            <button class="btn btn-passive">General</button>
+            <button class="btn btn-positive">FileVault</button>
+          </div>
+
+          <br>
+          <br>
 
           <h3>Buttons</h3>
           <button class="btn">Default</button>
@@ -142,18 +155,16 @@
           <br><br>
 
           <h4>Buttons large</h4>
-          <button class="btn large">Default</button>
-          <button class="btn btn-primary large">Positive</button>
+          <button class="btn btn-large">Default</button>
+          <button class="btn btn-primary btn-large">Positive</button>
 
           <br><br>
           <h4>Buttons small</h4>
-          <button class="btn small">Default</button>
-          <button class="btn btn-primary small">Positive</button>
+          <button class="btn btn-small">Default</button>
+          <button class="btn btn-primary btn-small">Positive</button>
 
           <br><br>
-          <h4>Buttons groups</h4>
-          <button class="btn small">Default</button>
-          <button class="btn btn-primary small">Positive</button>
+
 
 
 
