update toolbar actions & add groups button

--- a/app/index.html
+++ b/app/index.html
@@ -22,9 +22,10 @@
         <div class="window-controls">
           <i close></i>
           <i minimize></i>
+          <i maximize></i>
           <i></i>
         </div>
-        <div class="title">
+        <div class="title hide">
           <div class="title-content">
             Window Title
           </div>
