--- a/app/neutron-icons.html
+++ b/app/neutron-icons.html
@@ -7,6 +7,11 @@
 		<polyline points="3,1 7.792,6 3,11"/>
 	</symbol>
 
+  <symbol id="minimize" fill="transparent"  viewBox="0 0 6 6">
+		<rect x="0" y="2" width="6" height="2"/>
+	</symbol>
+
+
   <symbol id="shuffle" fill="#333" stroke="transparent"  viewBox="0 0 32 32">
     <path d="M24.1,10.7h2.1V14L32,8.1l-5.8-5.8v3.9h-2.1c-5.9,0-9.2,4.4-12.2,8.3C9.3,18,7,21.3,3.4,21.3H0v4.5h3.4
 	c5.9,0,9.2-4.7,12.2-8.6C18.2,13.7,20.5,10.7,24.1,10.7z M8.7,13.2c0.2-0.3,0.5-0.7,0.8-1c0.6-0.8,1.3-1.7,2-2.6
