--- a/app/index.html
+++ b/app/index.html
@@ -33,20 +33,20 @@
         <div class="toolbar-actions">
             <div grid>
               <div two>
-                <button class="btn btn-passive large sub-title" data-name="View">aaa</button>
-                <button class="btn btn-passive large sub-title" data-name="Zoom">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="View">🔘</button>
+                <button class="btn btn-passive large sub-title" data-name="Zoom">🔘</button>
               </div>
               <div five class="text-center">
-                <button class="btn btn-passive large sub-title" data-name="Insert">aaa</button>
-                <button class="btn btn-passive large sub-title" data-name="Table">aaa</button>
-                <button class="btn btn-passive large sub-title" data-name="Chart">aaa</button>
-                <button class="btn btn-passive large sub-title" data-name="Text">aaa</button>
-                <button class="btn btn-passive large sub-title" data-name="Shape">aaa</button>
-                <button class="btn btn-passive large sub-title" data-name="Media">aaa</button>
-                <button class="btn btn-passive large sub-title" data-name="Comment">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="Insert">🔘</button>
+                <button class="btn btn-passive large sub-title" data-name="Table">🔘</button>
+                <button class="btn btn-passive large sub-title" data-name="Chart">🔘</button>
+                <button class="btn btn-passive large sub-title" data-name="Text">🔘</button>
+                <button class="btn btn-passive large sub-title" data-name="Shape">🔘</button>
+                <button class="btn btn-passive large sub-title" data-name="Media">🔘</button>
+                <button class="btn btn-passive large sub-title" data-name="Comment">🔘</button>
               </div>
               <div three class="text-center">
-                <button class="btn btn-passive large sub-title" data-name="Collaborate">aaa</button>
+                <button class="btn btn-passive large sub-title" data-name="Collaborate">🔘</button>
               </div>
               <div two class="text-right">
                 <div class="button-groups">
@@ -76,7 +76,7 @@
           <span class="close">
             <i class="icon"><svg><use xlink:href="#icon-close"/></svg></i>
           </span>
-          Tab item .active
+          Tab item active
         </div>
         <div class="tab-item">
           <span class="close">
