--- a/app/index.html
+++ b/app/index.html
@@ -116,7 +116,7 @@
             <span class="nav-item">AirDrop</span>
             <span class="nav-item">Applications</span>
             <span class="nav-item">Desktop</span>
-            <span class="nav-item">Dwonloads</span>
+            <span class="nav-item">Downloads</span>
 
             <span class="nav-title">Devices</span>
             <span class="nav-item">Remote Disc</span>
